@@ -170,7 +170,7 @@ This action 4 contains too few "00" bytes for the number of strings it
 declares.
 Check that the strings are terminated, add strings, and/or reduce num-ent.
 
-80: "<off> Value of <xoff>/<yoff> must not exceed 0Fh." (Warn 3)
+80: "<off> Value of <xoff>/<yoff> must not exceed 10h." (Warn 3)
 <xoff> or <yoff> was set to too high a value.
 Reduce the offset.
 
